.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Company_Holidays__c.object
<CustomObject>
    <description>Records public holidays in each Company or Country</description>
    <fields>
        <fullName>xcdhcm__Companies_Name__c</fullName>
        <label>Company</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipLabel>Company Public Holidays</relationshipLabel>
        <relationshipName>Company_Holidays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company_Holiday_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Leave year</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.xcdhcm__Companies_Name__c</field>
                <operation>equals</operation>
                <valueField>xcdhcm__Company_Holiday_Year__c.xcdhcm__Companies_Name__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Company_Holiday_Year__c</referenceTo>
        <relationshipLabel>Company Public Holidays</relationshipLabel>
        <relationshipName>Company_Leave</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Half_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Half day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Holiday_Date__c</fullName>
        <label>Holiday date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_year_starting_month__c</fullName>
        <formula>xcdhcm__Company_Holiday_Year__r.xcdhcm__Leave_year_starting_month__c &amp;&apos;-&apos;&amp;xcdhcm__Company_Holiday_Year__r.Name</formula>
        <label>Leave year start month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Region__c</fullName>
        <label>Region(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Select_AM_PM__c</fullName>
        <label>AM/PM/All day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Day</fullName>
                    <default>true</default>
                    <label>All Day</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company Public Holidays</label>
    <nameField>
        <label>Public holiday</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Public Holidays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Full_Day_Holiday_validation</fullName>
        <active>true</active>
        <description>Do not deactivate.  Checks before creating company public holiday: if the holiday is for &apos;All day&apos; then it does not allow you to check the Half day field as true.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL( xcdhcm__Select_AM_PM__c , &apos;All Day&apos;) , ISPICKVAL( xcdhcm__Select_AM_PM__c , &apos;&apos;) ) , xcdhcm__Half_day__c = true)</errorConditionFormula>
        <errorDisplayField>xcdhcm__Half_day__c</errorDisplayField>
        <errorMessage>Please uncheck the checkbox</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Half_Day_Holiday_validation</fullName>
        <active>true</active>
        <description>Do not deactivate.  Checks on creating company public holiday - if the holiday is &apos;AM or PM&apos; then forces the user to check the Half day field as true.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL( xcdhcm__Select_AM_PM__c , &apos;AM&apos;) , ISPICKVAL( xcdhcm__Select_AM_PM__c , &apos;PM&apos;) ) , xcdhcm__Half_day__c = false)</errorConditionFormula>
        <errorDisplayField>xcdhcm__Half_day__c</errorDisplayField>
        <errorMessage>Please check the checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Holiday_Date</fullName>
        <active>false</active>
        <description>Deprecated</description>
        <errorConditionFormula>YEAR( xcdhcm__Holiday_Date__c )  &lt;&gt;  VALUE(  xcdhcm__Company_Holiday_Year__r.Name)</errorConditionFormula>
        <errorDisplayField>xcdhcm__Holiday_Date__c</errorDisplayField>
        <errorMessage>This validation rule is depecated please deactive it under Company Public Holidays</errorMessage>
    </validationRules>
</CustomObject>